fix overflow on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,8 @@ body {
   font-family: "Source Sans 3", sans-serif;
   font-weight: 400;
   font-style: normal;
+  width:100%;
+  overflow-x:hidden;
 }
 
 /* Flex componenents */
